# python-uv-assessment

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  MLproject  README.md  docker-compose.yml  invoke.yaml  noxfile.py  pyproject.toml  python-uv-asessment.code-workspace  sonar-project.properties
.github/workflows/: ci.yml  publish.yml  template-update.yml
notebooks/: batch_inference_bedrock.ipynb  connect_to_bedrock.ipynb  connect_to_mlflow.ipynb
src/python_uv_asessment/: mlflow_utils.py
tasks/: projects.py  testing.py
