# https://python-poetry.org/docs/pyproject/

# PROJECT

[tool.poetry]
name = "python-uv-asessment"
version = "0.1.0"
description = "Assessment of the new uv tool to manage Python packages and projects."
repository = "https://github.com/avillalba-elastic/python-uv-asessment"
documentation = "https://avillalba-elastic.github.io/python-uv-asessment/"
authors = ["avillalba-elastic"]
readme = "README.md"
license = "MIT"
packages = [{ include = "python_uv_asessment", from = "src" }]

# DEPENDENCIES

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "2.16.2"
sagemaker-mlflow = "0.1.0"

[tool.poetry.group.tests.dependencies]
coverage = "^7.5.4"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-html = "^4.1.1"
pytest-random-order = "^1.1.1"
pytest-profiling = "^1.7.0"
nox = "^2024.10.9"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.9"
mypy = "^1.10.1"
ruff = "^0.5.0"
commitizen = "^3.27.0"
pre-commit = "^3.7.1"
invoke = "^2.2.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.5.1"

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.4"
nbformat = "^5.10.4"

# CONFIGURATIONS

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
strict = true
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

# SYSTEMS

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
